module(
    name = "boleynsu_org",
    version = "0.0.0",
)

DEPS = {
    "metadata": {
        "name": "boleynsu_org",
        "pin_cmd": "bazel run //cmd/infra/deps:update",
    },
    "bazel_deps": [
        {
            "name": "rules_cc",
            "type": "http_archive",
            "url": "https://github.com/bazelbuild/rules_cc/archive/refs/tags/0.2.17.tar.gz",
            "sha256": "283fa1cdaaf172337898749cf4b9b1ef5ea269da59540954e51fba0e7b8f277a",
            "version": "0.2.17",
            "strip_prefix": "rules_cc-0.2.17",
            "updated_at": "2026-02-18",
            "module_version": "0.2.17",
        },
        {
            "name": "rules_java",
            "type": "http_archive",
            "sha256": "b9c5ac9dfa76ab8e770ff8c979388878bf818afc850a8056fd7726a215354bf0",
            "url": "https://github.com/bazelbuild/rules_java/archive/refs/tags/9.6.1.tar.gz",
            "strip_prefix": "rules_java-9.6.1",
            "updated_at": "2026-02-25",
            "version": "9.6.1",
            "module_version": "9.6.1",
        },
        {
            "name": "rules_python",
            "type": "http_archive",
            "sha256": "098ba13578e796c00c853a2161f382647f32eb9a77099e1c88bc5299333d0d6e",
            "strip_prefix": "rules_python-1.9.0",
            "url": "https://github.com/bazelbuild/rules_python/archive/refs/tags/1.9.0.tar.gz",
            "updated_at": "2026-03-04",
            "version": "1.9.0",
            "module_version": "1.9.0",
        },
        {
            "name": "rules_proto",
            "type": "http_archive",
            "sha256": "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
            "strip_prefix": "rules_proto-7.1.0",
            "url": "https://github.com/bazelbuild/rules_proto/archive/refs/tags/7.1.0.tar.gz",
            "updated_at": "2024-12-18",
            "expires_at": "2027-01-18",
            "version": "7.1.0",
            "version_regex": "([^-]*)[0-9.-]*",
            "module_version": "7.1.0",
        },
        {
            "name": "io_bazel_rules_go",
            "module_name": "rules_go",
            "type": "http_archive",
            "sha256": "f9559fb15a12695160388ed37b34f34f55f8373aea3ceac95e882346df324c9f",
            "url": "https://github.com/bazelbuild/rules_go/archive/refs/tags/v0.60.0.tar.gz",
            "updated_at": "2026-02-10",
            "version": "v0.60.0",
            "strip_prefix": "rules_go-0.60.0",
            "module_version": "0.60.0",
        },
        {
            "name": "rules_oci",
            "type": "http_archive",
            "url": "https://github.com/bazel-contrib/rules_oci/archive/refs/tags/v2.3.0.tar.gz",
            "sha256": "e987cab7a35475cb9c9060fc3f338a1fc8896c240295a3272968b217acefd0cb",
            "strip_prefix": "rules_oci-2.3.0",
            "updated_at": "2026-03-12",
            "version": "v2.3.0",
            "module_version": "2.3.0",
        },
        {
            "name": "bazel_skylib",
            "type": "http_archive",
            "url": "https://github.com/bazelbuild/bazel-skylib/archive/refs/tags/1.9.0.tar.gz",
            "sha256": "d9b87903b95e412d37d41a2fa6b0b44b8ba52122c3880512674b26facfc985a2",
            "updated_at": "2026-01-17",
            "version": "1.9.0",
            "strip_prefix": "bazel-skylib-1.9.0",
            "module_version": "1.9.0",
        },
        {
            "name": "rules_jvm_external",
            "type": "http_archive",
            "sha256": "d74bf9f851f75add26dd234580af09e1837f892930c5c45d30d24ec579b817e4",
            "strip_prefix": "rules_jvm_external-6.10",
            "url": "https://github.com/bazelbuild/rules_jvm_external/archive/refs/tags/6.10.tar.gz",
            "updated_at": "2026-02-04",
            "version": "6.10",
            "module_version": "6.10",
        },
        {
            "name": "rules_pkg",
            "type": "http_archive",
            "url": "https://github.com/bazelbuild/rules_pkg/archive/refs/tags/1.2.0.tar.gz",
            "sha256": "de9c6411e8f1b45dd67ce2b93e9243731aec37df6d65cc20dcd574d2d0b65d0f",
            "updated_at": "2026-01-17",
            "version": "1.2.0",
            "strip_prefix": "rules_pkg-1.2.0",
            "module_version": "1.2.0",
        },
        {
            "name": "io_grpc_grpc_java",
            "module_name": "grpc-java",
            "type": "http_archive",
            "sha256": "d202e1759913b3d789052e5d243a994a44d1a30b6fc0f4286802c859ffd8d866",
            "strip_prefix": "grpc-java-1.80.0",
            "url": "https://github.com/grpc/grpc-java/archive/refs/tags/v1.80.0.tar.gz",
            "updated_at": "2026-03-17",
            "version": "v1.80.0",
            "module_version": "1.80.0",
        },
        {
            "name": "bazel_gazelle",
            "module_name": "gazelle",
            "type": "http_archive",
            "sha256": "493e954d8d1e4c5334c9c8c1558abee92994f3d4a0a50a592081823b6d29e932",
            "url": "https://github.com/bazelbuild/bazel-gazelle/archive/refs/tags/v0.48.0.tar.gz",
            "updated_at": "2026-03-26",
            "version": "v0.48.0",
            "strip_prefix": "bazel-gazelle-0.48.0",
            "module_version": "0.48.0",
        },
        {
            "name": "com_github_cdolivet_editarea",
            "type": "http_archive",
            "url": "https://github.com/cdolivet/EditArea/archive/refs/tags/v0.8.2.tar.gz",
            "sha256": "47b58cf925b76252156da52187329d2cfede4f0f6f83416dcd9f0753592cb1f0",
            "strip_prefix": "EditArea-0.8.2",
            "updated_at": "2022-07-24",
            "expires_at": "2026-04-18",
            "version": "v0.8.2",
            "build_file": "@boleynsu_org//third_party/com_github_cdolivet_editarea:repo.BUILD.bazel",
            "module_version": "0.8.2",
        },
        {
            "name": "toolchains_llvm",
            "type": "http_archive",
            "url": "https://github.com/bazel-contrib/toolchains_llvm/archive/refs/tags/v1.7.0.tar.gz",
            "sha256": "973691168f59cb35027190e458e6674871009e9193498325d920bd170d4bc75f",
            "strip_prefix": "toolchains_llvm-1.7.0",
            "updated_at": "2026-03-14",
            "version": "v1.7.0",
            "module_version": "1.7.0",
        },
        {
            "name": "bazel_linux_x86_64",
            "type": "http_archive",
            "version": "9.0.1",
            "url": "https://github.com/bazelbuild/bazel/releases/download/9.0.1/bazel-9.0.1-installer-linux-x86_64.sh",
            "archive_type": "zip",
            "sha256": "d216b18ee8a225a38610d23ab49cb62df5488bafdbd5f59d3f1f78ec59778976",
            "updated_at": "2026-03-10",
            "executable": True,
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazelbuild/bazel/releases/download/${DEPS_UPDATER_version}/bazel-${DEPS_UPDATER_version}-installer-linux-x86_64.sh",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "build_file_content": 'exports_files(glob(["**"]))',
            "module_version": "9.0.1",
        },
        {
            "name": "rules_license",
            "type": "http_archive",
            "sha256": "75759939aef3aeb726e801417a883deefadadb7fea49946a1f5bb74a5162e81e",
            "strip_prefix": "rules_license-1.0.0",
            "url": "https://github.com/bazelbuild/rules_license/archive/refs/tags/1.0.0.tar.gz",
            "updated_at": "2024-09-05",
            "expires_at": "2026-09-05",
            "version": "1.0.0",
            "module_version": "1.0.0",
        },
        {
            "name": "platforms",
            "type": "http_archive",
            "sha256": "852b71bfa15712cec124e4a57179b6bc95d59fdf5052945f5d550e072501a769",
            "strip_prefix": "platforms-1.0.0",
            "url": "https://github.com/bazelbuild/platforms/archive/refs/tags/1.0.0.tar.gz",
            "updated_at": "2025-07-13",
            "version": "1.0.0",
            "module_version": "1.0.0",
        },
        {
            "name": "kubectl_linux_amd64",
            "type": "http_file",
            "url": "https://dl.k8s.io/release/v1.35.3/bin/linux/amd64/kubectl",
            "sha256": "fd31c7d7129260e608f6faf92d5984c3267ad0b5ead3bced2fe125686e286ad6",
            "version": "v1.35.3",
            "updated_at": "2026-03-19",
            "executable": True,
            "override_updater": [
                {
                    "type": "shell",
                    "cmd": "version=$(curl -sfL https://dl.k8s.io/release/stable.txt)\necho DEPS_UPDATER_version=${version}\necho DEPS_UPDATER_url=https://dl.k8s.io/release/${version}/bin/linux/amd64/kubectl\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "1.35.3",
        },
        {
            "name": "sysroot_linux_x86_64",
            "type": "http_archive",
            "version": "42-20260203.111053-20260203.150204",
            "version_regex": "([0-9.]*)-([0-9.]*)-([0-9.]*)",
            "sha256": "d4ba659726d01e6559d1255aba78726139103ef509a2bd884303872bdc8493bf",
            "url": "https://public-artifacts.storage.boleyn.su/prebuilt/sysroot/42-20260203.111053-20260203.150204/sysroot_linux_x86_64.tar.gz",
            "updated_at": "2026-02-03",
            "build_file_content": 'filegroup(\n    name = "sysroot",\n    srcs = glob(["**"], exclude = ["etc/shadow", "etc/gshadow"]),\n    visibility = ["//visibility:public"],\n)\n',
            "module_version": "42.20260203.111053.20260203.150204",
        },
        {
            "name": "clang_linux_x86_64",
            "type": "http_archive",
            "version": "21.1.8-42-20260203.111053-20260203.150746",
            "version_regex": "([0-9.]*)-([0-9.]*)-([0-9.]*)-([0-9.]*)",
            "sha256": "c4d9c62f7df404abe456f9476c3468dc94fc16713336b549ae9c2d17cd6f027d",
            "url": "https://public-artifacts.storage.boleyn.su/prebuilt/clang/21.1.8-42-20260203.111053-20260203.150746/clang_linux_x86_64.tar.gz",
            "updated_at": "2026-02-03",
            "module_version": "21.1.8.42.20260203.111053.20260203.150746",
        },
        {
            "name": "bazel_features",
            "type": "http_archive",
            "version": "v1.44.0",
            "sha256": "ccf85bbf0613d12bf6df2c8470ecec544a6fe8ceab684e970e8ed4dde4cb24ec",
            "strip_prefix": "bazel_features-1.44.0",
            "url": "https://github.com/bazel-contrib/bazel_features/releases/download/v1.44.0/bazel_features-v1.44.0.tar.gz",
            "updated_at": "2026-03-23",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazel-contrib/bazel_features/releases/download/${DEPS_UPDATER_version}/bazel_features-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
            "module_version": "1.44.0",
        },
        {
            "name": "com_google_protobuf",
            "module_name": "protobuf",
            "type": "http_archive",
            "url": "https://github.com/protocolbuffers/protobuf/releases/download/v34.1/protobuf-34.1.tar.gz",
            "sha256": "e4e6ff10760cf747a2decd1867741f561b216bd60cc4038c87564713a6da1848",
            "strip_prefix": "protobuf-34.1",
            "version": "v34.1",
            "updated_at": "2026-03-21",
            "module_version": "34.1",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/protocolbuffers/protobuf/releases/download/${DEPS_UPDATER_version}/protobuf-${DEPS_UPDATER_version#v}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
        },
        {
            "name": "zlib",
            "type": "http_archive",
            "url": "https://github.com/madler/zlib/releases/download/v1.3.2/zlib-1.3.2.tar.gz",
            "sha256": "bb329a0a2cd0274d05519d61c667c062e06990d72e125ee2dfa8de64f0119d16",
            "strip_prefix": "zlib-1.3.2",
            "version": "v1.3.2",
            "updated_at": "2026-02-17",
            "module_file_content": 'module(\n    name = "zlib",\n    version = "1.3",\n)\nbazel_dep(name = "platforms", version = "0.0.7")\nbazel_dep(name = "rules_cc", version = "0.0.8")\n',
            "build_file": "@com_google_protobuf//third_party:zlib.BUILD",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/madler/zlib/releases/download/${DEPS_UPDATER_version}/zlib-${DEPS_UPDATER_version#v}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
            "module_version": "1.3.2",
        },
        {
            "name": "apple_support",
            "type": "http_archive",
            "url": "https://github.com/bazelbuild/apple_support/releases/download/2.4.0/apple_support.2.4.0.tar.gz",
            "sha256": "9f2ee0d23bf46b1c8ac88cea73ab13d415f340ec777e1e68841e09153880a67e",
            "version": "2.4.0",
            "updated_at": "2026-03-26",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazelbuild/apple_support/releases/download/${DEPS_UPDATER_version}/apple_support.${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "2.4.0",
        },
        {
            "name": "stardoc",
            "type": "http_archive",
            "url": "https://github.com/bazelbuild/stardoc/releases/download/0.8.1/stardoc-0.8.1.tar.gz",
            "sha256": "ab6b747b3164510547f7696c6e06921966ccec7e08d9b81ec60133c3b09d5e5e",
            "version": "0.8.1",
            "updated_at": "2026-02-03",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazelbuild/stardoc/releases/download/${DEPS_UPDATER_version}/stardoc-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "0.8.1",
        },
        {
            "name": "rules_kotlin",
            "type": "http_archive",
            "url": "https://github.com/bazelbuild/rules_kotlin/releases/download/v2.3.20/rules_kotlin-v2.3.20.tar.gz",
            "sha256": "13d5b767d697473ced9b55547a18a6ab65ab3fae5440555deee8a44c886b50aa",
            "version": "v2.3.20",
            "updated_at": "2026-03-18",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazelbuild/rules_kotlin/releases/download/${DEPS_UPDATER_version}/rules_kotlin-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "2.3.20",
        },
        {
            "name": "aspect_bazel_lib",
            "type": "http_archive",
            "version": "v2.22.5",
            "version_regex": "v(2\\..*)",
            "sha256": "94e192033ca8027f26de71c9000a67ef9c73695c2b88e2c559045170917ead0c",
            "strip_prefix": "bazel-lib-2.22.5",
            "url": "https://github.com/aspect-build/bazel-lib/releases/download/v2.22.5/bazel-lib-v2.22.5.tar.gz",
            "updated_at": "2026-01-17",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/aspect-build/bazel-lib/releases/download/${DEPS_UPDATER_version}/bazel-lib-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
            "module_version": "2.22.5",
        },
        {
            "name": "buildozer",
            "type": "http_archive",
            "version": "v8.5.1",
            "sha256": "bd0786e0f8b6aed8c35898b4c06f64ba853d61d7c8361edb5a8d43c6ea37f5c6",
            "strip_prefix": "buildozer-8.5.1",
            "url": "https://github.com/fmeum/buildozer/releases/download/v8.5.1/buildozer-v8.5.1.tar.gz",
            "updated_at": "2026-02-12",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/fmeum/buildozer/releases/download/${DEPS_UPDATER_version}/buildozer-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
            "module_version": "8.5.1",
        },
        {
            "name": "rules_android",
            "type": "http_archive",
            "version": "v0.7.1",
            "sha256": "7c45b6aaa837fb6f2f23ad11387638cb00fa9f839a04ec564caac70a543a9cd5",
            "strip_prefix": "rules_android-0.7.1",
            "url": "https://github.com/bazelbuild/rules_android/archive/refs/tags/v0.7.1.tar.gz",
            "updated_at": "2026-01-17",
            "module_version": "0.7.1",
        },
        {
            "name": "rules_robolectric",
            "type": "http_archive",
            "version": "v4.16.1",
            "sha256": "dae5b7250096188c7989f7db9df3d094be7a5c2ae17047499e4110f8c27fed8b",
            "strip_prefix": "robolectric-bazel-4.16.1",
            "url": "https://github.com/robolectric/robolectric-bazel/archive/refs/tags/v4.16.1.tar.gz",
            "updated_at": "2026-01-23",
            "module_version": "4.16.1",
        },
        {
            "name": "io_abseil_py",
            "module_name": "abseil-py",
            "type": "http_archive",
            "version": "v2.4.0",
            "sha256": "190418ea571aa09a0d91b08e3f71a2598337821dcec3f24872f44a140e8499ee",
            "strip_prefix": "abseil-py-2.4.0",
            "url": "https://github.com/abseil/abseil-py/archive/refs/tags/v2.4.0.tar.gz",
            "updated_at": "2026-02-03",
            "module_version": "2.4.0",
            "module_file_content": 'module(name = "abseil-py")\n\nbazel_dep(name = "rules_cc", version = "0.2.16")\nbazel_dep(name = "rules_python", version = "1.8.1")\n\nregister_toolchains("@rules_python//python/runtime_env_toolchains:all")\n',
        },
        {
            "name": "container_structure_test",
            "type": "http_archive",
            "version": "v1.22.1",
            "sha256": "186bb1493ebb3c597e53b2a7abd5460c683c63d404e44a64223d26bb3315841d",
            "strip_prefix": "container-structure-test-1.22.1",
            "url": "https://github.com/GoogleContainerTools/container-structure-test/archive/refs/tags/v1.22.1.tar.gz",
            "updated_at": "2026-01-17",
            "module_version": "1.22.1",
        },
        {
            "name": "abseil-cpp",
            "type": "http_archive",
            "version": "20260107.1",
            "sha256": "4314e2a7cbac89cac25a2f2322870f343d81579756ceff7f431803c2c9090195",
            "strip_prefix": "abseil-cpp-20260107.1",
            "url": "https://github.com/abseil/abseil-cpp/archive/refs/tags/20260107.1.tar.gz",
            "updated_at": "2026-02-11",
            "module_version": "20260107.1",
        },
        {
            "name": "rules_rust",
            "type": "http_archive",
            "version": "0.69.0",
            "sha256": "bbc764c252d061281b2359277a4d46480e2dcfaf72afc1ce6e00ada58ccbfd4c",
            "url": "https://github.com/bazelbuild/rules_rust/releases/download/0.69.0/rules_rust-0.69.0.tar.gz",
            "updated_at": "2026-03-02",
            "module_version": "0.69.0",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazelbuild/rules_rust/releases/download/${DEPS_UPDATER_version}/rules_rust-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
        },
        {
            "name": "rules_shell",
            "type": "http_archive",
            "version": "v0.7.1",
            "sha256": "3709d1745ba4be4ef054449647b62e424267066eca887bb00dd29242cb8463a0",
            "strip_prefix": "rules_shell-0.7.1",
            "url": "https://github.com/bazelbuild/rules_shell/releases/download/v0.7.1/rules_shell-v0.7.1.tar.gz",
            "updated_at": "2026-03-23",
            "module_version": "0.7.1",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazelbuild/rules_shell/releases/download/${DEPS_UPDATER_version}/rules_shell-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
        },
        {
            "name": "jq_linux_amd64",
            "type": "http_file",
            "version": "jq-1.8.1",
            "version_regex": "jq-([0-9.]+)",
            "url": "https://github.com/jqlang/jq/releases/download/jq-1.8.1/jq-linux64",
            "sha256": "020468de7539ce70ef1bceaf7cde2e8c4f2ca6c3afb84642aabc5c97d9fc2a0d",
            "executable": True,
            "updated_at": "2025-07-13",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/jqlang/jq/releases/download/${DEPS_UPDATER_version}/jq-linux64",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "1.8.1",
        },
        {
            "name": "jq.bzl",
            "type": "http_archive",
            "version": "v0.6.1",
            "sha256": "e2eab5410b2eecc72f01d73590c58aefeddbb696ddf9d9c34dcee02dd79625ab",
            "strip_prefix": "jq.bzl-0.6.1",
            "url": "https://github.com/bazel-contrib/jq.bzl/releases/download/v0.6.1/jq.bzl-v0.6.1.tar.gz",
            "updated_at": "2026-02-21",
            "module_version": "0.6.1",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazel-contrib/jq.bzl/releases/download/${DEPS_UPDATER_version}/jq.bzl-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
        },
        {
            "name": "tar.bzl",
            "type": "http_archive",
            "version": "v0.10.0",
            "sha256": "80d99a88c75efcb4e3a31661d53efbe9a6c50e497d9d033198b823868bc5434f",
            "strip_prefix": "tar.bzl-0.10.0",
            "url": "https://github.com/bazel-contrib/tar.bzl/releases/download/v0.10.0/tar.bzl-v0.10.0.tar.gz",
            "updated_at": "2026-03-06",
            "module_version": "0.10.0",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazel-contrib/tar.bzl/releases/download/${DEPS_UPDATER_version}/tar.bzl-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
        },
        {
            "name": "bazel_lib",
            "type": "http_archive",
            "version": "v3.2.2",
            "sha256": "3d62bf30b95b71a566d9ebca50ee78d370b12522d244235b41166f65b142705d",
            "strip_prefix": "bazel-lib-3.2.2",
            "url": "https://github.com/bazel-contrib/bazel-lib/releases/download/v3.2.2/bazel-lib-v3.2.2.tar.gz",
            "updated_at": "2026-03-02",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazel-contrib/bazel-lib/releases/download/${DEPS_UPDATER_version}/bazel-lib-${DEPS_UPDATER_version}.tar.gz\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [
                        {"name": "fields", "value": ["sha256", "strip_prefix"]}
                    ],
                },
            ],
            "module_version": "3.2.2",
        },
        {
            "name": "package_metadata",
            "type": "http_archive",
            "version": "v0.0.7",
            "version_skip": ["0.0.8", "0.0.9"],
            "sha256": "8f27dc7393e3f3bdc793bdc4ba36d67a63c22cc9d38cc65d3204654974ea4563",
            "strip_prefix": "supply-chain-0.0.7/metadata",
            "url": "https://github.com/bazel-contrib/supply-chain/releases/download/v0.0.7/supply-chain-v0.0.7.tar.gz",
            "updated_at": "2025-11-21",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/bazel-contrib/supply-chain/releases/download/${DEPS_UPDATER_version}/supply-chain-${DEPS_UPDATER_version}.tar.gz\necho DEPS_UPDATER_strip_prefix=supply-chain-${DEPS_UPDATER_version#v}/metadata\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "0.0.7",
        },
        {
            "name": "helly25_bzl",
            "type": "http_archive",
            "version": "0.3.1",
            "sha256": "c8e28a3cb7e465b4b71f5d4d366c5796cc0ae822fa510a8adf12cf39a9709902",
            "strip_prefix": "bzl-0.3.1",
            "url": "https://github.com/helly25/bzl/releases/download/0.3.1/bzl-0.3.1.tar.gz",
            "updated_at": "2026-01-17",
            "override_updater": [
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["version"]}],
                },
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_url=https://github.com/helly25/bzl/releases/download/0.3.1/bzl-${DEPS_UPDATER_version}.tar.gz\necho DEPS_UPDATER_strip_prefix=bzl-${DEPS_UPDATER_version}\n",
                },
                {
                    "type": "deps_updater",
                    "name": "bazel_deps",
                    "extra_args": [{"name": "fields", "value": ["sha256"]}],
                },
            ],
            "module_version": "0.3.1",
        },
    ],
    "pip_deps": [
        {
            "name": "ruamel.yaml",
            "version": "0.19.1",
            "updated_at": "2026-01-17",
            "module_version": "0.19.1",
        },
        {
            "name": "PyYAML",
            "version": "6.0.3",
            "updated_at": "2025-09-28",
            "module_version": "6.0.3",
        },
    ],
    "maven_deps": [
        {
            "name": "commons-io:commons-io",
            "version": "2.21.0",
            "version_skip": ["20030203.000550"],
            "updated_at": "2025-11-10",
            "module_version": "2.21.0",
        },
        {
            "name": "org.mariadb.jdbc:mariadb-java-client",
            "version": "3.5.7",
            "updated_at": "2026-01-17",
            "module_version": "3.5.7",
        },
        {
            "name": "org.apache.tomcat.embed:tomcat-embed-core",
            "version": "11.0.20",
            "updated_at": "2026-03-22",
            "module_version": "11.0.20",
        },
        {
            "name": "org.apache.tomcat.embed:tomcat-embed-jasper",
            "version": "11.0.20",
            "updated_at": "2026-03-22",
            "module_version": "11.0.20",
        },
        {
            "name": "org.webjars:jquery",
            "version": "4.0.0",
            "updated_at": "2026-02-05",
            "module_version": "4.0.0",
        },
        {
            "name": "org.webjars:bootstrap",
            "version": "3.4.1",
            "version_regex": "(3\\..*)",
            "updated_at": "2022-04-09",
            "expires_at": "2026-04-18",
            "module_version": "3.4.1",
        },
        {
            "name": "io.undertow:undertow-core",
            "version": "2.3.24.Final",
            "version_regex": "(.*)\\.Final",
            "updated_at": "2026-03-22",
            "module_version": "2.3.24",
        },
        {
            "name": "commons-validator:commons-validator",
            "version": "1.10.1",
            "updated_at": "2025-11-17",
            "module_version": "1.10.1",
        },
        {
            "name": "commons-codec:commons-codec",
            "version": "1.21.0",
            "updated_at": "2026-02-03",
            "module_version": "1.21.0",
        },
        {
            "name": "org.wildfly.common:wildfly-common",
            "version": "2.0.1",
            "version_regex": "(.*)(?:|\\.Final)",
            "updated_at": "2025-10-25",
            "module_version": "2.0.1",
        },
        {
            "name": "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer",
            "version": "20260313.1",
            "updated_at": "2026-03-14",
            "module_version": "20260313.1",
        },
        {
            "name": "org.apache.commons:commons-text",
            "version": "1.15.0",
            "updated_at": "2026-01-17",
            "module_version": "1.15.0",
        },
    ],
    "container_deps": [
        {
            "name": "io_quay_boleynsu_ci_runner",
            "version": "43-20260324.033527",
            "version_regex": "([0-9.]*)-([0-9.]*)",
            "registry": "quay.io",
            "repository": "boleynsu/ci-runner",
            "tag": "43-20260324.033527",
            "digest": "sha256:35297c501f1bcab3310a8213e03545cb4fa4e53676f5befba1a325dca315d5da",
            "updated_at": "2026-03-24",
            "platforms": ["linux/amd64"],
            "module_version": "43.20260324.33527",
        },
        {
            "name": "io_docker_index_library_mariadb",
            "version": "12.2.2",
            "registry": "index.docker.io",
            "repository": "library/mariadb",
            "tag": "12.2.2",
            "digest": "sha256:e16f61b8f6ed25111adbb1c5c19bbc2904efc8ed14029999af0cbe1c7ae18bf1",
            "updated_at": "2026-03-17",
            "platforms": [
                "linux/amd64",
                "linux/arm64/v8",
                "linux/ppc64le",
                "linux/s390x",
            ],
            "module_version": "12.2.2",
            "override_updater": [
                {
                    "type": "shell",
                    "cmd": "echo DEPS_UPDATER_version=$(curl -sfL https://mariadb.org/mariadb/all-releases/ | grep -o '[0-9.]\\+</a></td><td>[0-9-]\\+</td><td>Stable</td></tr>' | grep -o '^[0-9.]\\+' | head -1)",
                },
                {
                    "type": "deps_updater",
                    "name": "container_deps",
                    "extra_args": [{"name": "update_version", "value": False}],
                },
            ],
        },
        {
            "name": "io_docker_index_library_adminer",
            "version": "5.4.2",
            "registry": "index.docker.io",
            "repository": "library/adminer",
            "tag": "5.4.2",
            "digest": "sha256:16a72c6140f64d00a3a9edf8d3d3b18a7b0a29ca31b0453378d9eb71f01f9e34",
            "updated_at": "2026-03-14",
            "platforms": [
                "linux/amd64",
                "linux/arm/v6",
                "linux/arm/v7",
                "linux/arm64/v8",
                "linux/386",
                "linux/ppc64le",
                "linux/riscv64",
                "linux/s390x",
            ],
            "module_version": "5.4.2",
        },
        {
            "name": "io_docker_index_filebrowser_filebrowser",
            "version": "v2.62.1",
            "registry": "index.docker.io",
            "repository": "filebrowser/filebrowser",
            "tag": "v2.62.1",
            "digest": "sha256:6a0b050d4a5aae763783137eb3049f4f960428b363d05182c774bf4cc633becc",
            "updated_at": "2026-03-14",
            "platforms": ["linux/amd64", "linux/arm64", "linux/arm/v7"],
            "module_version": "2.62.1",
        },
        {
            "name": "io_quay_boleynsu_oj_c99runner",
            "version": "43-20260324.033527",
            "version_regex": "([0-9.]*)-([0-9.]*)",
            "registry": "quay.io",
            "repository": "boleynsu/oj-c99runner",
            "tag": "43-20260324.033527",
            "digest": "sha256:ae1cdec4b984a277e2392ed1fb0166c3d6df64cbd294b49f3bdb904f5fc6f429",
            "updated_at": "2026-03-24",
            "platforms": ["linux/amd64", "linux/arm64/v8"],
            "module_version": "43.20260324.33527",
        },
        {
            "name": "io_quay_boleynsu_rbe_fedora",
            "version": "43-20260327.132211",
            "version_regex": "([0-9.]*)-([0-9.]*)",
            "registry": "quay.io",
            "repository": "boleynsu/rbe-fedora",
            "tag": "43-20260327.132211",
            "digest": "sha256:20c49c7ebce1798b0cf408a4681a82c87691e09a33e16c75d5264b3aadc228f1",
            "updated_at": "2026-03-27",
            "platforms": ["linux/amd64"],
            "module_version": "43.20260327.132211",
        },
        {
            "name": "io_quay_boleynsu_base",
            "version": "43-20260324.033527",
            "version_regex": "([0-9.]*)-([0-9.]*)",
            "registry": "quay.io",
            "repository": "boleynsu/base",
            "digest": "sha256:7d927e55632498e12f150180a1511f8dddf7c1f2e006d034b0dddb82e945d9cf",
            "tag": "43-20260324.033527",
            "updated_at": "2026-03-24",
            "platforms": ["linux/amd64", "linux/arm64/v8"],
            "module_version": "43.20260324.33527",
        },
    ],
    "toolchain_deps": [
        {
            "name": "c",
            "version": "17",
            "updated_at": "2022-05-07",
            "expires_at": "2026-04-18",
        },
        {
            "name": "cpp",
            "version": "20",
            "updated_at": "2023-05-12",
            "expires_at": "2026-04-18",
        },
        {
            "name": "java",
            "version": "21",
            "updated_at": "2023-05-12",
            "expires_at": "2026-04-18",
        },
        {
            "name": "python",
            "version": "3.14",
            "updated_at": "2026-01-18",
            "expires_at": "2027-01-18",
        },
        {
            "name": "golang",
            "version": "1.26.1",
            "updated_at": "2026-01-18",
            "expires_at": "2027-01-18",
        },
    ],
}
# DEPS END

[
    [
        bazel_dep(
            name = dep.get("module_name", dep["name"]),
            version = dep.get("module_version", dep["version"]),
            repo_name = dep["name"],
        ),
        single_version_override(
            module_name = dep.get("module_name", dep["name"]),
            version = dep.get("module_version", dep["version"]),
        ),
    ]
    for dep in DEPS["bazel_deps"]
    if dep["type"] == "http_archive"
]

(JAVA_VERSION,) = [dep["version"] for dep in DEPS["toolchain_deps"] if dep["name"] == "java"]
toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(toolchains, "remotejdk{}_linux_toolchain_config_repo".format(JAVA_VERSION))

(PYTHON_VERSION,) = [dep["version"] for dep in DEPS["toolchain_deps"] if dep["name"] == "python"]
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, python = "python_{}_host".format(PYTHON_VERSION.replace(".", "_")), python_sdk_toolchains = "pythons_hub")

PIP_PACKAGES = {dep["name"]: dep["version"] for dep in DEPS["pip_deps"]}
pinned_pip = use_repo_rule("//tools/build/repo_rules:pip_lockfile.bzl", "pinned_pip")
pinned_pip(
    name = "pinned_pip",
    packages = PIP_PACKAGES,
    pin_cmd = "REPIN=1 bazel run @unpinned_pip//:pin",
    requirements_txt = "//:requirements.txt",
)
unpinned_pip = use_repo_rule("//tools/build/repo_rules:pip_lockfile.bzl", "unpinned_pip")
unpinned_pip(
    name = "unpinned_pip",
    packages = PIP_PACKAGES,
    requirements_txt = "//:requirements.txt",
    python_interpreter_target = "@python//:bin/python3",
    extra_args = ["--allow-unsafe"],
)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "boleynsu_org_pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "@pinned_pip//:requirements.txt",
)
use_repo(pip, pip = "boleynsu_org_pip")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "{}:{}".format(artifact["name"], artifact["version"])
        for artifact in DEPS["maven_deps"]
        if "override_target" not in artifact
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fail_if_repin_required = True,
    known_contributing_modules = ["boleynsu_org", "grpc-java", "protobuf"],
)
use_repo(maven, unpinned_maven = "unpinned_maven", maven = "maven")

(CLANG,) = [dep for dep in DEPS["bazel_deps"] if dep["name"] == "clang_linux_x86_64"]
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain_linux_x86_64",
    llvm_versions = {
        "linux-x86_64": CLANG["version"].split("-")[0],
    },
    exec_os = "linux",
    exec_arch = "x86_64",
    urls = {
        "linux-x86_64": [CLANG["url"]],
    },
    sha256 = {
        "linux-x86_64": CLANG["sha256"],
    },
)
llvm.sysroot(
    name = "llvm_toolchain_linux_x86_64",
    targets = ["linux-x86_64"],
    label = "@sysroot_linux_x86_64//:sysroot",
)
use_repo(llvm, "llvm_toolchain_linux_x86_64")

(GOLANG_VERSION,) = [dep["version"] for dep in DEPS["toolchain_deps"] if dep["name"] == "golang"]
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(
    name = "go_linux_amd64",
    goos = "linux",
    goarch = "amd64",
    version = GOLANG_VERSION,
)
use_repo(go_sdk, go_linux_amd64_toolchains = "go_linux_amd64")

bazel_deps = use_extension("//tools/build/module_extensions:bazel_deps_extension.bzl", "bazel_deps_extension")
bazel_deps.from_file(deps = "//:MODULE.bazel")
use_repo(bazel_deps, "bazel_deps")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
[
    http_file(
        name = file["name"],
        url = file["url"],
        sha256 = file["sha256"],
        executable = file.get("executable"),
        downloaded_file_path = file.get("downloaded_file_path"),
    )
    for file in DEPS["bazel_deps"]
    if file["type"] == "http_file"
]

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
[
    [
        oci.pull(
            name = image["name"],
            image = "{}/{}".format(image["registry"], image["repository"]),
            digest = image["digest"],
            platforms = image.get("platforms", []),
        ),
        use_repo(
            oci,
            image["name"],
        ),
    ]
    for image in DEPS["container_deps"]
]
